# qualcomm

./: .gitignore  .gitmodules  README.md  evaluate.py  evaluate_vm.py
OpenCLCppRunner/: CMakeLists.txt  main.cpp
OpenCLCppRunner/common/: common_functions.cpp
OpenCLCppRunner/implementations/: conv2d_vgg16.cpp  simple_mad.cpp  tvm_resnet50v2_conv_kernel.cpp  vector_add.cpp
OpenCLRunner/: README.md
logs/: vit_base_patch16_224.texture.float16.acc16.autotvm.log.tmp  vit_base_patch16_224.texture.float32.autotvm.log.tmp
scripts/: android_watchdog.sh  evaluate.md  evaluate.py  inception_v3_conv.py  launch_rpc.sh
sd888_log/ww02/: deeplabv3.texture.float16.acc16.autotvm.out  deeplabv3.texture.float16.acc32.autotvm.out  deeplabv3.texture.float32.acc32.autotvm.out  mace_resnet50_v2.texture.float16.acc32.autotvm.out  mace_resnet50_v2.texture.float32.acc32.autotvm.out  yolov3.texture.float16.acc16.autotvm.out  yolov3.texture.float16.acc32.autotvm.out  yolov3.texture.float32.acc32.autotvm.out
sd888_log/ww06/: vgg16.texture.float32.terminated.log.tmp
sd888_log/ww13/: f1632.txt
sd888_log/ww43/: deeplabv3_10trials.texture.float16.acc16.autotvm.log.tmp
sd888_log/ww46/: inceptionv3.texture.float16.acc16.autotvm.log.tmp
sd888_log/ww48/: mobilenetv1.texture.float16.acc32.autotvm.log.tmp  vgg16.texture.float16.acc32.autotvm.log.tmp  yolov3_textures.fp16.log.tmp  yolov3_textures.fp16.out
sd888_log/ww49/: inceptionv3.texture.float16.acc32.autotvm.out  yolov3.texture.float16.acc16.autotvm.out  (+3 more)
tflite_measurer/: run_benchmark.sh
tvm/: CMakeLists.txt
(+117 files in other folders)
